--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,6 +17,12 @@ h3 {
 	padding-top: 10px;
 }
 
+h4 {
+	font-size: 0.8rem;
+	text-transform: uppercase;
+	color: #555;
+}
+
 .back-button {
 	color: #fff !important;
 }
