--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -7,7 +7,9 @@
 	   <a class="item item-avatar" href="#" ng-repeat="activity in Activities">
 	      <img src="{{activity.photo.src}}">
 	      <h2 style="text-align: left">{{activity.type}}</h2>
-	      <p>{{activity.comments}} <span>{{activity.date}}</span></p>
+	      <p>{{activity.comments}}</p>
+	      <p>{{activity.type}}</p>
+	      <p>{{activity.date}}</p>
 	    </a>
 
 	</div>
