--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -3,22 +3,22 @@
     <h3>Media Info</h3>
 
     <div class="mediaLinks pageButtons">
-    	<a href="#/app/request/order">
+    	<a ng-click="LoadURL('https://www.youtube.com/channel/UCDhD45LuZDf1FmnU4kujmGA')">
     		<i class="ion-social-youtube youTube"></i>
     	</a>
-    	<a href="#/app/request/technical">
+    	<a ng-click="LoadURL('https://www.linkedin.com/company/kaytech-engineered-fabrics')">
     		<i class="ion-social-linkedin linkedIn"></i>
     	</a>
-    	<a href="#/app/request/design">
+    	<a ng-click="LoadURL('https://www.facebook.com/KaytechEngineeredFabrics')">
     		<i class="ion-social-facebook faceBook"></i>
     	</a>
-    	<a href="#/app/request/account">
+    	<a ng-click="LoadURL('https://twitter.com/kaytechsa')">
     		<i class="ion-social-twitter twitter"></i>
     	</a>
-    	<a href="#/app/productinfo">
+    	<a ng-click="LoadURL('https://www.pinterest.com/kaytechsa/')">
     		<i class="ion-social-pinterest pinterest"></i>
     	</a>
-    	<a href="#/app/game">
+    	<a ng-click="LoadURL('https://plus.google.com/112880968307489818868/videos')">
     		<i class="ion-social-googleplus googlePlus"></i>
     	</a>
     </div>
