--- a/www/templates/product-type.html
+++ b/www/templates/product-type.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <h3>Application Info</h3>
+    <h3>{{Type}}</h3>
 
     <!-- ng-class="{noImage : hasImage(product)}" -->
 
