--- a/www/templates/settings-modal.html
+++ b/www/templates/settings-modal.html
@@ -18,11 +18,11 @@
       Activity
     </li>
 
-    <li class="item">
+    <li class="item" ng-click="LogOutUser()" ng-show="LoggedIn">
       Logout
     </li>
 
-    <h4>Settings</h4>
+    <!-- <h4>Settings</h4>
 
 	  <li class="item item-toggle">
 	     Setting
@@ -44,7 +44,7 @@
 	     </label>
 	  </li>
 
-	</ul>
+	</ul> -->
 
   </ion-content>
 </ion-modal-view>
