--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -47,7 +47,7 @@
         </ion-item>
 
         <ion-item nav-clear menu-close href="#/app/media">
-          Media
+          Media Links
         </ion-item>
 
         <ion-item nav-clear menu-close href="#/app/findus">
