--- a/www/templates/settings-modal.html
+++ b/www/templates/settings-modal.html
@@ -18,7 +18,7 @@
       Activity
     </li>
 
-    <li class="item" ng-click="LogOutUser()" ng-show="LoggedIn">
+    <li class="item" ng-click="LogOutUser()">
       Logout
     </li>
 
