--- a/www/templates/signup-modal.html
+++ b/www/templates/signup-modal.html
@@ -6,83 +6,125 @@
   </ion-header-bar>
   <ion-content>
 
-  <h3>Please create an account to access this section.</h3>
+  <ul class="list">
+	  <li class="item item-checkbox">
+	     <label class="checkbox">
+	       <input type="checkbox" ng-model="IHaveAnAccount">
+	     </label>
+	     I already have an account.
+	  </li>
+	</ul>
 
-  	<form novalidate name="NewAccount">
+  	<div ng-hide="IHaveAnAccount">
+  		<h3>Please create an account to access this section.</h3>
 
-	    <div class="list list-inset">
+	  	<form novalidate name="NewAccount">
 
-		  <label class="item item-input">
-		    <input type="text" class="caps" placeholder="Full Name" name="FullName" ng-model="NewUser.fullname" required="">
-		  </label>
+		    <div class="list list-inset">
 
-			<div ng-show="NewAccount.$submitted || NewAccount.FullName.$touched">
-				<span class="err" ng-show="NewAccount.FullName.$error.required">Please provide your name.</span>
+			  <label class="item item-input">
+			    <input type="text" class="caps" placeholder="Full Name" name="FullName" ng-model="NewUser.fullname" required="">
+			  </label>
+
+				<div ng-show="NewAccount.$submitted || NewAccount.FullName.$touched">
+					<span class="err" ng-show="NewAccount.FullName.$error.required">Please provide your name.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="email" placeholder="Email Address" name="EmailAddress" ng-model="NewUser.emailaddress" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.EmailAddress.$touched">
+					<span class="err" ng-show="NewAccount.EmailAddress.$error.required">Please provide your email.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="password" placeholder="Password" name="Password" ng-model="NewUser.password" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.Password.$touched">
+					<span class="err" ng-show="NewAccount.Password.$error.required">Please provide your password.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="password" placeholder="Confirm password" name="ConfirmPassword" ng-model="NewUser.confirmPassword" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.ConfirmPassword.$touched">
+					<span class="err" ng-show="NewAccount.ConfirmPassword.$error.required">Please confirm your password.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="text" placeholder="Company Name" name="Company" ng-model="NewUser.company" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.Company.$touched">
+					<span class="err" ng-show="NewAccount.Company.$error.required">Please provide your company name.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="text" placeholder="Contact Number" name="ContactNumber" ng-model="NewUser.contactNumber" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.ContactNumber.$touched">
+					<span class="err" ng-show="NewAccount.ContactNumber.$error.required">Please provide your contact number.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="text" placeholder="Physical Address" name="Address" ng-model="NewUser.address" required="">
+			  </label>
+
+			  	<div ng-show="NewAccount.$submitted || NewAccount.Address.$touched">
+					<span class="err" ng-show="NewAccount.Address.$error.required">Please provide your address.</span>
+				</div>
+
+			  <label class="item item-input item-select">
+			    <div class="input-label">
+			      Region
+			    </div>
+			    <select ng-options="region for region in Regions" ng-model="NewUser.region" required="">
+			    </select>
+			  </label>
+
+			<button ng-click="CreateUser()" class="button button-block button-balanced" ng-show="NewAccount.$valid">
+			  Submit
+			</button>
+
 			</div>
 
-		  <label class="item item-input">
-		    <input type="email" placeholder="Email Address" name="EmailAddress" ng-model="NewUser.emailaddress" required="">
-		  </label>
+		</form>
+  	</div>
 
-		  	<div ng-show="NewAccount.$submitted || NewAccount.EmailAddress.$touched">
-				<span class="err" ng-show="NewAccount.EmailAddress.$error.required">Please provide your email.</span>
+  	<div ng-show="IHaveAnAccount">
+  		<h3>Please log in.</h3>
+  		<form novalidate name="LoginForm">
+
+		    <div class="list list-inset">
+
+			  <label class="item item-input">
+			    <input type="email" placeholder="Email Address" name="EmailAddress" ng-model="LoginFormData.username" required="">
+			  </label>
+
+			  	<div ng-show="LoginForm.$submitted || LoginForm.EmailAddress.$touched">
+					<span class="err" ng-show="LoginForm.EmailAddress.$error.required">Please provide your email.</span>
+				</div>
+
+			  <label class="item item-input">
+			    <input type="password" placeholder="Password" name="Password" ng-model="LoginFormData.password" required="">
+			  </label>
+
+			  	<div ng-show="LoginForm.$submitted || LoginForm.Password.$touched">
+					<span class="err" ng-show="LoginForm.Password.$error.required">Please provide your password.</span>
+				</div>
+
+			<button ng-click="LoginUser()" class="button button-block button-balanced" ng-show="LoginForm.$valid">
+			  Log In
+			</button>
+
 			</div>
 
-		  <label class="item item-input">
-		    <input type="password" placeholder="Password" name="Password" ng-model="NewUser.password" required="">
-		  </label>
-
-		  	<div ng-show="NewAccount.$submitted || NewAccount.Password.$touched">
-				<span class="err" ng-show="NewAccount.Password.$error.required">Please provide your password.</span>
-			</div>
-
-		  <label class="item item-input">
-		    <input type="password" placeholder="Confirm password" name="ConfirmPassword" ng-model="NewUser.confirmPassword" required="">
-		  </label>
-
-		  	<div ng-show="NewAccount.$submitted || NewAccount.ConfirmPassword.$touched">
-				<span class="err" ng-show="NewAccount.ConfirmPassword.$error.required">Please confirm your password.</span>
-			</div>
-
-		  <label class="item item-input">
-		    <input type="text" placeholder="Company Name" name="Company" ng-model="NewUser.company" required="">
-		  </label>
-
-		  	<div ng-show="NewAccount.$submitted || NewAccount.Company.$touched">
-				<span class="err" ng-show="NewAccount.Company.$error.required">Please provide your company name.</span>
-			</div>
-
-		  <label class="item item-input">
-		    <input type="text" placeholder="Contact Number" name="ContactNumber" ng-model="NewUser.contactNumber" required="">
-		  </label>
-
-		  	<div ng-show="NewAccount.$submitted || NewAccount.ContactNumber.$touched">
-				<span class="err" ng-show="NewAccount.ContactNumber.$error.required">Please provide your contact number.</span>
-			</div>
-
-		  <label class="item item-input">
-		    <input type="text" placeholder="Physical Address" name="Address" ng-model="NewUser.address" required="">
-		  </label>
-
-		  	<div ng-show="NewAccount.$submitted || NewAccount.Address.$touched">
-				<span class="err" ng-show="NewAccount.Address.$error.required">Please provide your address.</span>
-			</div>
-
-		  <label class="item item-input item-select">
-		    <div class="input-label">
-		      Region
-		    </div>
-		    <select ng-options="region for region in Regions" ng-model="NewUser.region">
-		    </select>
-		  </label>
-
-		<button ng-click="CreateUser()" class="button button-block button-balanced" ng-show="NewAccount.$valid">
-		  Submit
-		</button>
-
-		</div>
-
-	</form>
+		</form>
+  	</div>
 
   </ion-content>
 </ion-modal-view>
