initial password reset

--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <h3>Media Info</h3>
+    <h3>Media Links</h3>
 
     <div class="mediaLinks pageButtons">
     	<a ng-click="LoadURL('https://www.youtube.com/channel/UCDhD45LuZDf1FmnU4kujmGA')">
