--- a/www/templates/product-info.html
+++ b/www/templates/product-info.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <h3>Product Applications</h3>
+    <h3>Product Info</h3>
 
     <div class="productIcons pageButtons">
     	<a href="#/app/productType/diy">
