--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -1,5 +1,15 @@
-<ion-view>
+<!-- <ion-view>
   <ion-content>
     <h3>bidim Game</h3>
+
+ -->
+	
+
+	<div class="gameArea">
+		<div id="box"></div>
+	</div>
+	
+<!-- 
   </ion-content>
 </ion-view>
+ -->
