--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -8,38 +8,62 @@
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Full Name</span>
-		    <input type="text" ng-model="User.fullname">
+		    <input type="text" ng-model="User.fullname" name="FullName" required="">
 		  </label>
+
+			<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.FullName.$touched">
+				<span class="err" ng-show="UpdateUserForm.FullName.$error.required">Please provide your name.</span>
+			</div>
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Email</span>
-		    <input type="text" ng-model="User.emailaddress">
+		    <input type="text" ng-model="User.emailaddress" name="EmailAddress" required="">
 		  </label>
+
+		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.EmailAddress.$touched">
+				<span class="err" ng-show="UpdateUserForm.EmailAddress.$error.required">Please provide your email.</span>
+			</div>
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Address</span>
-		    <input type="text" ng-model="User.address">
+		    <input type="text" ng-model="User.address" name="Address" required="">
 		  </label>
+
+		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.Address.$touched">
+				<span class="err" ng-show="UpdateUserForm.Address.$error.required">Please provide your address.</span>
+			</div>
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Company</span>
-		    <input type="text" ng-model="User.company">
+		    <input type="text" ng-model="User.company" name="Company" required="">
 		  </label>
+
+		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.Company.$touched">
+				<span class="err" ng-show="UpdateUserForm.Company.$error.required">Please provide your company name.</span>
+			</div>
 
 		  <label class="item item-input item-stacked-label">
 		    <span class="input-label">Contact Number</span>
-		    <input type="text" ng-model="User.contactNumber">
+		    <input type="text" ng-model="User.contactNumber" name="ContactNumber" required="">
 		  </label>
+
+		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.ContactNumber.$touched">
+				<span class="err" ng-show="UpdateUserForm.ContactNumber.$error.required">Please provide your contact number.</span>
+			</div>
 
 		  <label class="item item-input item-select">
 		    <div class="input-label">
 		      Region
 		    </div>
-		    <select ng-options="region for region in Regions" ng-model="User.region">
+		    <select ng-options="region for region in Regions" ng-model="User.region" name="Region" required="">
 		    </select>
 		  </label>
 
-		 <button ng-click="SendUpdate()" class="button button-block button-balanced">
+		  	<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.Region.$touched">
+				<span class="err" ng-show="UpdateUserForm.Region.$error.required">Please provide your contact number.</span>
+			</div>
+
+		 <button ng-click="SendUpdate()" class="button button-block button-balanced" ng-show="UpdateUserForm.$valid">
 		  Submit
 		</button>
 
