--- a/www/templates/media.html
+++ b/www/templates/media.html
@@ -5,21 +5,27 @@
     <div class="mediaLinks pageButtons">
     	<a ng-click="LoadURL('https://www.youtube.com/channel/UCDhD45LuZDf1FmnU4kujmGA')">
     		<i class="ion-social-youtube youTube"></i>
+            <span>Youtube</span>
     	</a>
     	<a ng-click="LoadURL('https://www.linkedin.com/company/kaytech-engineered-fabrics')">
     		<i class="ion-social-linkedin linkedIn"></i>
+            <span>LinkedIn</span>
     	</a>
     	<a ng-click="LoadURL('https://www.facebook.com/KaytechEngineeredFabrics')">
     		<i class="ion-social-facebook faceBook"></i>
+            <span>Facebook</span>
     	</a>
     	<a ng-click="LoadURL('https://twitter.com/kaytechsa')">
     		<i class="ion-social-twitter twitter"></i>
+            <span>Twitter</span>
     	</a>
     	<a ng-click="LoadURL('https://www.pinterest.com/kaytechsa/')">
     		<i class="ion-social-pinterest pinterest"></i>
+            <span>Pinterest</span>
     	</a>
     	<a ng-click="LoadURL('https://plus.google.com/112880968307489818868/videos')">
     		<i class="ion-social-googleplus googlePlus"></i>
+            <span>Google +</span>
     	</a>
     </div>
 
