--- a/www/templates/signup-modal.html
+++ b/www/templates/signup-modal.html
@@ -83,6 +83,7 @@
 			      Region
 			    </div>
 			    <select ng-options="region for region in Regions" ng-model="NewUser.region" required="">
+			    	<option value=""></option>
 			    </select>
 			  </label>
 
