--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -7,12 +7,21 @@
 	    <form novalidate name="UpdateUserForm">
 
 		  <label class="item item-input item-stacked-label">
-		    <span class="input-label">Full Name</span>
-		    <input type="text" ng-model="User.fullname" name="FullName" required="">
+		    <span class="input-label">First Name</span>
+		    <input type="text" ng-model="User.firstName" name="FirstName" required="">
 		  </label>
 
-			<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.FullName.$touched">
-				<span class="err" ng-show="UpdateUserForm.FullName.$error.required">Please provide your name.</span>
+			<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.FirstName.$touched">
+				<span class="err" ng-show="UpdateUserForm.FirstName.$error.required">Please provide your name.</span>
+			</div>
+
+		  <label class="item item-input item-stacked-label">
+		    <span class="input-label">Last Name</span>
+		    <input type="text" ng-model="User.lastName" name="LastName" required="">
+		  </label>
+
+			<div ng-show="UpdateUserForm.$submitted || UpdateUserForm.LastName.$touched">
+				<span class="err" ng-show="UpdateUserForm.LastName.$error.required">Please provide your surname.</span>
 			</div>
 
 		  <label class="item item-input item-stacked-label">
