updated password reset

--- a/www/templates/resetPassword-modal.html
+++ b/www/templates/resetPassword-modal.html
@@ -9,15 +9,15 @@
        <a class="button  button-clear button-dark" ng-click="CancelResetPassword()">Take me to login</a>
       <!--      for searching user-->
       <div ng-hide="canReset">
-        <form novalidate name="LoginForm">
+        <form novalidate name="ResetForm">
 		    <div class="list list-inset">
 			  <label class="item item-input">
-			    <input type="email" placeholder="Email Address" name="EmailAddress" ng-model="LoginFormData.username" required="">
+			    <input type="email" placeholder="Email Address" name="EmailAddress" ng-model="Reset.username" required="">
 			  </label>
-			  	<div ng-show="LoginForm.$submitted || LoginForm.EmailAddress.$touched">
-					<span class="err" ng-show="LoginForm.EmailAddress.$error.required">Please provide your username.</span>
+			  	<div ng-show="ResetForm.$submitted || ResetForm.username.$touched">
+					<span class="err" ng-show="LoginForm.username.$error.required">Please provide your username.</span>
 				</div>
-			  <button ng-click="GetResetQuestion()" class="button button-block button-balanced" ng-show="LoginForm.$valid">
+			  <button ng-click="GetResetQuestion()" class="button button-block button-balanced" ng-show="ResetForm.$valid">
 			  Next
 			</button>
           </div>           
@@ -29,11 +29,11 @@
       <div ng-show="canReset">
         <form novalidate name="AnswerForm">            
             <label>Question:</label>
-            <p>sdfsf sdfsdfsd sdfsdfsdf sdfdsfsd sdfsdfdsfsd dfgdgfsdfsd sdfdsfdsf sdfdsfds sdfsdfsdfsd sdfsdfsd.</p>
+            <p>{{Reset.question}}</p>
             <br/>
-            <input type="text" placeholder="Answer" required=true/>
+            <input type="text" placeholder="Answer" ng-model="Reset.answer" required=true/>
              
-              <button ng-click="LoginUser()" class="button button-block button-balanced" >Submit</button>
+              <button ng-click="ResetPassword()" class="button button-block button-balanced" >Submit</button>
           </div>
         </form>
       
