--- a/www/templates/signup-modal.html
+++ b/www/templates/signup-modal.html
@@ -147,8 +147,9 @@
 			  Log In
 			</button>
 
-			</div>
-
+			</div>            
+            <br>
+            <a class="button  button-clear button-dark" ng-click="ShowPasswordReset()">I forgot my password!</a>            
 		</form>
   	</div>
 
