--- a/www/css/style.css
+++ b/www/css/style.css
@@ -372,6 +372,50 @@ ion-content {
 	z-index: 1000000000000 !important;
 }
 
+.smallModal {
+	width: 70%;
+	height: 70%;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	min-height: 0;
+}
 
+.rightIcon {
+	position: absolute;
+	right: 15px;
+	font-size: 1.3rem;
+}
+
+.modal-backdrop-bg {
+	background-color: rgba(0,0,0,0.5);
+}
+
+/*Custom Modal Animation*/
+
+.scale-in {
+	-webkit-transform: scale(0.0);
+  	transform: scale(0.0);
+  	opacity: 0;
+}
+.scale-in.ng-enter,
+.scale-in > .ng-enter {
+	-webkit-transition: all cubic-bezier(.1, .7, .1, 1) 400ms;
+ 	transition: all cubic-bezier(.1, .7, .1, 1) 400ms;
+}
+.scale-in.ng-enter-active,
+.scale-in > .ng-enter-active {
+	-webkit-transform: scale(1);
+ 	transform: scale(1);
+	opacity: 1;
+}
+.scale-in.ng-leave,
+.scale-in > .ng-leave {
+	-webkit-transition: all ease-in-out 250ms;
+ 	transition: all ease-in-out 250ms;
+}
 
 
