--- a/www/templates/request.html
+++ b/www/templates/request.html
@@ -25,7 +25,7 @@
 			</div>
 
 		  <label class="item item-input">
-		    <input type="text" class="caps" placeholder="FLast Name" name="LastName" ng-model="Request.lastName" required="">
+		    <input type="text" class="caps" placeholder="Last Name" name="LastName" ng-model="Request.lastName" required="">
 		  </label>
 
 		  	<div ng-show="OrderQuoteRequest.$submitted || OrderQuoteRequest.LastName.$touched">
