--- a/www/templates/resetPassword-modal.html
+++ b/www/templates/resetPassword-modal.html
@@ -1,12 +1,15 @@
 <ion-modal-view>
   <ion-header-bar>
     <div class="buttons">
-      <button class="button button-clear" ng-click="CloseNewAccountWithoutSignup()">Close</button>
+      <button class="button button-clear" ng-click="CancelResetPassword()">Close</button>
     </div>
   </ion-header-bar>
   <ion-content>
-      
-       <a class="button  button-clear button-dark" ng-click="CancelResetPassword()">Take me to login</a>
+
+       <button class="button button-block button-dark button-small" ng-click="CancelResetPassword()">
+        Cancel
+       </button>
+
       <!--      for searching user-->
       <div ng-hide="canReset">
         <form novalidate name="ResetForm">
