--- a/www/templates/signup-modal.html
+++ b/www/templates/signup-modal.html
@@ -144,9 +144,11 @@
 			  Log In
 			</button>
 
-			</div>            
-            <br>
-            <a class="button  button-clear button-dark" ng-click="ShowPasswordReset()">I forgot my password!</a>            
+			</div>  
+			
+            <button class="button button-block button-dark button-small" ng-click="ShowPasswordReset()">
+			  I forgot my password!
+			</button>          
 		</form>
   	</div>
 
