--- a/www/templates/settings-modal.html
+++ b/www/templates/settings-modal.html
@@ -18,33 +18,13 @@
       Activity
     </li>
 
+    <li class="item" ng-click="GoUrl('app.changepassword')">
+    	Change Password
+    </li>
+
     <li class="item" ng-click="LogOutUser()">
       Logout
     </li>
-
-    <!-- <h4>Settings</h4>
-
-	  <li class="item item-toggle">
-	     Setting
-	     <label class="toggle toggle-positive">
-	       <input type="checkbox">
-	       <div class="track">
-	         <div class="handle"></div>
-	       </div>
-	     </label>
-	  </li>
-
-	  <li class="item item-toggle">
-	     Setting
-	     <label class="toggle toggle-positive">
-	       <input type="checkbox">
-	       <div class="track">
-	         <div class="handle"></div>
-	       </div>
-	     </label>
-	  </li>
-
-	</ul> -->
 
   </ion-content>
 </ion-modal-view>
