--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -5,8 +5,9 @@
  -->
 	
 
-	<div class="gameArea">
+	<div class="gameArea _jsGameArea">
 		<div id="box"></div>
+		<p ng-click="StopGame()" class="stopGame">Stop Game</p>
 	</div>
 	
 <!-- 
