--- a/www/css/style.css
+++ b/www/css/style.css
@@ -38,6 +38,12 @@ h4 {
  	height: 30px;
 }
 
+.bar-header {
+	background: url('../img/kayapp_white-green.png') #063b6f no-repeat center 30px;
+	background-size: 150px !important;
+	background-position-x: 10px;
+}
+
 .platform-ios .bar-header {
 	background: url('../img/kayapp_white-green.png') #063b6f no-repeat center 30px !important;
 	background-size: 150px !important;
