--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,6 +56,12 @@ h4 {
 	background-position-x: 10px;
 }
 
+.platform-wp8 .bar-header {
+	background: url('../img/kayapp_white-green.png') #063b6f no-repeat center 15px !important;
+	background-size: 150px !important;
+	background-position-x: 10px;
+}
+
 .platform-android .gear {
 	top: 10px;
 }
