--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,8 @@
 /* Empty. Add your own CSS if you like */
+@-ms-viewport{width:device-width}
+
+
+
 
 html, body, input {
 	font-family: 'Lato', sans-serif;
