--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -5,7 +5,7 @@
  -->
 	
 
-	<div class="gameArea _jsGameArea">
+	<div class="gameArea _jsGameArea" id="gameArea">
 		<div id="box"></div>
 		<p ng-click="StopGame()" class="stopGame">Stop Game</p>
 	</div>
