--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,6 +4,8 @@
       <!-- <button ng-click="OpenNewAccount()" class="button button-block button-balanced">
         New User
       </button> -->
+
+      <!-- <input type="file"> -->
     
 
     <div class="homeIcons pageButtons">
