--- a/www/templates/address-modal.html
+++ b/www/templates/address-modal.html
@@ -21,7 +21,7 @@
           <div class="input-label">
             Region
           </div>
-          <select ng-options="region for region in Regions" ng-model="NewUser.region" required="">
+          <select ng-options="region for region in Regions" ng-model="NewUser.region" required="" data-tab-disabled="true">
             <option value=""></option>
           </select>
         </label>
