--- a/www/css/style.css
+++ b/www/css/style.css
@@ -386,16 +386,6 @@ ion-content {
   font-size: 0.7rem;
 }
 
-.gameArea {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #fff;
-	z-index: 1000000000000 !important;
-}
-
 .smallModal {
 	width: 70%;
 	height: 70%;
@@ -420,10 +410,39 @@ ion-content {
 
 /*GAME*/
 
+.gameArea {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #fff url('../img/game/bg.png') no-repeat center;
+	background-size: cover;
+	z-index: 1000000000000 !important;
+	font-family: 'Sigmar One', cursive;
+}
+
+#powerContainer {
+	position: absolute;
+	bottom: 10px;
+	left: 60px;
+	width: 210px;
+	z-index: 10;
+}
+
+#powerBar {
+	background: #FF6880;
+	position: absolute;
+	bottom: 14px;
+	left: 65px;
+	width: 0px;
+	height: 30px;
+	z-index: 9;
+}
+
 #box {
     background-color: red;
     height: 50px;
-    left: 20px;
     position: absolute;
     top: 10px;
     width: 50px;
@@ -444,6 +463,14 @@ ion-content {
 	width: 100px;
 	right: -30px;
 	top: 290px;
+}
+
+.scoreDisplay {
+	position: absolute;
+	top: 40px;
+	right: 0px;
+	-webkit-transform: rotate(90deg);
+	font-size: 2rem;
 }
 
 
