--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -1,16 +1,11 @@
-<!-- <ion-view>
-  <ion-content>
-    <h3>bidim Game</h3>
 
- -->
 	
 
 	<div class="gameArea _jsGameArea" id="gameArea">
 		<div id="box"></div>
 		<p ng-click="StopGame()" class="stopGame">Stop Game</p>
+		<div class="scoreDisplay">{{TimeLeft}}</div>
+		<img src="img/game/healthContainer.png" alt="" id="powerContainer">
+		<div id="powerBar"></div>
 	</div>
-	
-<!-- 
-  </ion-content>
-</ion-view>
- -->
+
